--- a/assets/_scss/post/table-of-contents.scss
+++ b/assets/_scss/post/table-of-contents.scss
@@ -3,6 +3,8 @@
  * Licensed under MIT
 */
 
+
+
 #toc-container {
   @include get_scheme(bootstrap-dark-panel-colors-);
   @include get_scheme(table-of-contents-colors-);
@@ -10,8 +12,8 @@
   position: fixed;
   z-index: 1002;
   /* table of contents box top */
-  top: 600px;
-  left: 10px;
+  top: 10px;
+  right: 10px;
   max-width: calc(var(--side-nav-width-def) + var(--main-container-margin));
 }
 
