--- a/_includes/post_common/post-info-html.html
+++ b/_includes/post_common/post-info-html.html
@@ -10,9 +10,9 @@
     &nbsp;<i class="fa fa-calendar"></i>&nbsp;&nbsp;{{include.date}}
   </small>
   {%comment-%} read time  {%-endcomment-%}
-  <small>
+  <!-- <small>
     &nbsp;&nbsp;&nbsp;<span><i class="fa fa-clock-o"></i>&nbsp;{{include.read_time}}</span>
-  </small>
+  </small> -->
   {%comment-%} comment count  {%-endcomment-%}
   {%- if site.data.conf.posts.comments.engine == "disqus" and site.data.conf.posts.comments.disqus.comment_count %}
   <small class="meta-link" {{include.comment_style}}>
